Salesforce lead endpoints (#52)
* Salesforce lead endpoints

* Remove api constants

* Update yaml
