# DotNet/Salesforce/Contracts/LeadsQueryResponse.cs
@@ -1,0 +1,14 @@
+﻿using Newtonsoft.Json;
+using System.Collections.Generic;
+using System.Text.Json.Serialization;
+
+namespace Salesforce.Contracts
+{
+    public class LeadsQueryResponse : ServerResponse
+    {
+        [JsonProperty("leads")]
+        [JsonPropertyName("leads")]
+        public List<LeadResponse> Leads { get; set; }
+
+    }
+}
